--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
   	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0">
-    <link rel="stylesheet" href="/vendors/css/rain.css">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="vendors/css/rain.css">
+    <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700,800" rel="stylesheet">
     <title>Ocean Media</title>
   </head>
@@ -24,24 +24,24 @@
       <section class="presentation">
         <div class="presentation-sky" id="presentation-sky">
           <div class="presentation-sun hide3">
-            <object type="image/svg+xml" data="/assets/images/sun.svg">
+            <object type="image/svg+xml" data="assets/images/sun.svg">
             </object>
           </div>
           <div class="presentation-cloud left hide3">
-            <object type="image/svg+xml" data="/assets/images/cloud_l.svg">
+            <object type="image/svg+xml" data="assets/images/cloud_l.svg">
             </object>
           </div>
           <div class="presentation-cloud right hide3">
-            <object type="image/svg+xml" data="/assets/images/cloud_r.svg">
+            <object type="image/svg+xml" data="assets/images/cloud_r.svg">
             </object>
           </div>
         </div>
         <div class="presentation-waves">
           <div class="presentation-wave assist"></div>
-          <img src="/assets/images/wave-back.svg" class="presentation-wave-reference" alt="">
+          <img src="assets/images/wave-back.svg" class="presentation-wave-reference" alt="">
           <div class="presentation-wave back"></div>
           <div class="presentation-boat">
-            <object type="image/svg+xml" data="/assets/images/boat.svg">
+            <object type="image/svg+xml" data="assets/images/boat.svg">
 
             </object>
           </div>
@@ -58,8 +58,8 @@
     </section>
 
   </body>
-  <script src="/vendors/js/jquery-3.2.1.min.js"></script>
-  <script src="/vendors/js/raphael-min.js"></script>
-  <script src="/vendors/js/rain.js"></script>
-  <script src="/js/main.js"></script>
+  <script src="vendors/js/jquery-3.2.1.min.js"></script>
+  <script src="vendors/js/raphael-min.js"></script>
+  <script src="vendors/js/rain.js"></script>
+  <script src="js/main.js"></script>
 </html>
