--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="vendors/css/rain.css">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700,800" rel="stylesheet">
-    <base href="/" target="_blank">
+    <base href="/" >
     <title>Ocean Media</title>
   </head>
   <body>
