--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <base href="/" >
+    <base href="/ocean-media" >
   	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0">
     <link rel="stylesheet" href="/vendors/css/rain.css">
     <link rel="stylesheet" href="/css/style.css">
